Reset scale values when navigating away from stage

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -256,6 +256,9 @@
                 treesData[index].branches.forEach(branch => {
                   branch.tooltip.isVisible = false;
                 });
+
+                treesData[index].baseTooltip.scaleX = 0;
+                treesData[index].baseTooltip.scaleY = 0;
               }
             });
 
